fix overflow bug

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -76,6 +76,7 @@ ul {
 }
 
 section {
+  overflow-x: hidden;
   position: relative;
   scroll-behavior: smooth; /* <----- THE SECRET ---- */
 }
